# MzChess

./: .gitignore  .readthedocs.yaml  MzChess.epj  MzChess.epj.bak  install.py  readme.rst  setup.cfg  setup.py
.eric6project/: MzChess.eqj  MzChess.etj  TimeTracker.txt  project-apis.db
.eric7project/: MzChess.eqj  MzChess.etj  commitHistory.json  project-apis.db
.jedi/: project.json
MzChess/: AboutDialog.py  AboutDialog.ui  README.md  Ui_AboutDialog.py  Ui_buildFen.py  Ui_chessMainWindow.py  Ui_configureEngine.py  Ui_configureEngineOptions.py  Ui_propagatePawn.py  Ui_textEdit.py  __init__.py  analysePosition.py  analysePosition.ui  annotateEngine.py  buildFen.desktop  buildFen.ui  chessMainWindow.py  chessMainWindow.ui  chessengine.py  configureEngine.py  configureEngine.ui  configureEngineOptions.py  configureEngineOptions.ui  credits.txt  eco.py  gameheaderview.py  gamelisttableview.py  gametreeview.py  helpDialog.py  installLeipFont.py  mzChess.desktop  pgnParse.py  position.py  postInstall.py  propagatePawn.ui  qboardviewclass.py  qbuildfen.py  readme.rst  scoreplotgraphicsview.py  settings.ini  (+3 more)
doc/: Makefile  analysePosition.rst  annotator.rst  buildFen.rst  chessMainWindow.rst  chessengine.rst  conf.py  configureEngine.rst  gameListTableView.rst  gui.rst  index.rst  make.bat  pgnParse.rst  python - Verknüpfung.lnk  requirements.txt  scoreplotgraphicsview.rst  screenshots.pptx
docs/: .buildinfo  analysePosition.html  annotator.html  buildFen.html  chessMainWindow.html  chessengine.html  configureEngine.html  eco.html  gameHeaderView.html  gameTreeView.html  (+13 more)
(+139 files in other folders)
