[metadata]
name = MzChess
author = Reinhard Maerz
version = attr: MzChess.__version__
project_urls = Documentation = https://reinhardm-dev.github.io/MzChess
description = A Chess GUI using PyQt
long_description = file: readme.rst
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent
  Development Status :: 5 - Production/Stable
  Natural Language :: English
  Topic :: Games/Entertainment :: Board Games

[options]
packages = MzChess
python_requires = >=3.7 
install_requires =
  chess >=1.4
  ply >=3.11
  PyQt6 >= 6.2; platform_system =='Windows'
  PyQt6-Charts >=6.2; platform_system =='Windows'
setup_requires = wheel

[options.package_data]
* = *.txt, *.ui, *.gpl3, *.rst, *.png, *.desktop 
eco = *.fsc, *.tsv, *.txt, *.md
pieces = *.svg, *.ttf 
training = *.pgn'

[options.entry_points]
gui_scripts =
  buildFen = MzChess:runFenBuilder
  mzChess = MzChess:runMzChess
